2004-03-20  Bastien Nocera  <hadess@hadess.net>

	* src/bacon-video-widget-xine.c: (setup_config_video),
	(bacon_video_widget_realize), (xine_event_message),
	(bacon_video_widget_new): do not re-use the sound driver when creating
	a new stream, disable ALSA's event thread with current xine-lib
	CVS (Closes: #122120)

2004-03-20  Bastien Nocera  <hadess@hadess.net>

	* NEWS: removed duplicate entry
	* src/bacon-video-widget-xine.c: (load_video_out_driver):
	* src/totem-preferences.c: (on_checkbutton2_toggled),
	(totem_setup_preferences):
	* src/video-utils.c: (totem_display_is_local):
	* src/video-utils.h: move totem_display_is_local to the video-utils
	and use it before probing for the Xv driver

2004-03-18  Bastien Nocera  <hadess@hadess.net>

	* configure.in: detect bad taste in TV series (Closes: #137526)

2004-03-13  Bastien Nocera  <hadess@hadess.net>

	* NEWS: updated
	* src/bacon-video-widget-xine.c:
	(bacon_video_widget_instance_init), (setup_config_stream),
	(xine_event): don't set the image settings if they already are set
	(possibly Close: #133011)
	remove the white artifacts work-around, doesn't work properly

2004-03-12  Ronald Bultje  <rbultje@ronald.bitfreak.net>

	* configure.in:
	  GStreamer 0.8 doesn't exist yet, use gstreamer-0.8 with min. version
	  set to 0.7.6.

2004-03-11  Bastien Nocera  <hadess@hadess.net>

	* configure.in: update to use GStreamer 0.8
	* src/bacon-video-widget-xine.c:
	(bacon_video_widget_instance_init), (bacon_video_widget_realize),
	(bacon_video_widget_unrealize), (bacon_video_widget_expose),
	(bacon_video_widget_open): work-around the white artifacts when
	switching on to fullscreen, only save the volume if it's possible
	to save the volume to avoid getting a '0' volume when we restart
	with an audio output

2004-03-10  Bastien Nocera  <hadess@hadess.net>

	* NEWS: update the news

2004-03-10  Bastien Nocera  <hadess@hadess.net>

	* src/bacon-video-widget-gst.c:
	(bacon_video_widget_fullscreen_mode_available):