@@ -89,7 +89,6 @@ add check for open device in write()
 
 statusbar is wrong after having ejected an audio CD that was playing
 
-- add gnome URL handlers for rtsp, mms and pnm
 - support gxine, freevo, ypl playlist formats
 - use xpath where possible in playlist parsing
 - fix command-line parsing
