@@ -1,5 +1,13 @@
 2004-03-20  Bastien Nocera  <hadess@hadess.net>
 
+	* NEWS: updated
+	* README: removed TODO item
+	* src/bacon-video-widget-xine.c: (setup_url_handlers),
+	(setup_config): setup the url handlers for the pnm, mms and rtsp
+	protocols
+
+2004-03-20  Bastien Nocera  <hadess@hadess.net>
+
 	* src/bacon-video-widget-xine.c: (setup_config_video),
 	(bacon_video_widget_realize), (xine_event_message),
 	(bacon_video_widget_new): do not re-use the sound driver when creating
